--- a/src/main/resources/templates/projects/view.html
+++ b/src/main/resources/templates/projects/view.html
@@ -35,6 +35,9 @@
                 <a th:href="@{/projects/{id}/items(id=${project.id})}" class="btn btn-success">
                     View Project Items
                 </a>
+                <a th:href="@{/projects/{id}/structure(id=${project.id})}" class="btn btn-success">
+                    Анализ СИ
+                </a>
             </div>
 
             <!-- Блок для отображения результата -->
