--- a/src/main/resources/templates/projects/list.html
+++ b/src/main/resources/templates/projects/list.html
@@ -3,13 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Projects List</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
+  <style>
+    .back-btn {
+      margin-bottom: 1.5rem;
+    }
+  </style>
 </head>
 <body>
 <div class="container mt-4">
+
+  <a th:href="@{/home}" class="btn btn-outline-primary back-btn">
+    <i class="bi bi-arrow-left"></i> На главную
+  </a>
+
   <h1>Projects</h1>
 
-  <button class="btn btn-primary mb-3" onclick="window.location.href='/projects/new'">Add Project</button>
 
   <table class="table table-striped">
     <thead>
@@ -34,6 +44,9 @@
     </tr>
     </tbody>
   </table>
+
+  <button class="btn btn-primary mb-3" onclick="window.location.href='/projects/new'">Add Project</button>
+
 </div>
 </body>
 </html>
