--- a/src/main/resources/templates/projects/view.html
+++ b/src/main/resources/templates/projects/view.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Project View</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
 <div class="container mt-4">
+    <a th:href="@{/projects}" class="btn btn-secondary">Back to Projects</a>
     <h1>Project Details</h1>
 
     <div class="card mb-4">
@@ -45,7 +47,7 @@
         </div>
     </div>
 
-    <a th:href="@{/projects}" class="btn btn-secondary">Back to Projects</a>
+
 </div>
 
 <script>
